--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <link
     href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800;900&family=Outfit:wght@400;500;600;700;800;900&display=swap"
     rel="stylesheet">
-  <title>CarBot System PRO</title>
+  <title>CarBot System</title>
 </head>
 
 <body>
